Use ZGC to attempt to stabilize